cmake_minimum_required(VERSION 3.5.0)

# Set the default build type to Release because we want to benchmark
# optimized code.
if (NOT CMAKE_BUILD_TYPE)
  set(none "None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used)")
  set(other "Debug Release RelWithDebInfo MinSizeRel")
  set(CMAKE_BUILD_TYPE Release CACHE STRING
      "Choose the type of build, options are: ${none} ${other}.")
endif ()

project(DTOA_BENCHMARK C CXX)

add_executable(
  dtoa-benchmark
  src/main.cpp

  # Tests:
  src/double-conversion-test.cpp
  src/dragonbox-test.cpp
  src/ryu-test.cpp
  src/fmt-test.cpp
  src/null-test.cpp
  #src/ostringstream-test.cpp
  #src/puff-test.cpp
  src/schubfach-test.cpp
  #src/sprintf-test.cpp
  src/to_chars-test.cpp
  src/xjb-test.cpp
  src/yy-test.cpp
  src/zmij-test.cpp
  src/milo-test.cpp
  src/asteria-test.cpp

  # Libraries:
  src/double-conversion/bignum-dtoa.cc
  src/double-conversion/bignum.cc
  src/double-conversion/cached-powers.cc
  src/double-conversion/diy-fp.cc
  src/double-conversion/double-conversion.cc
  src/double-conversion/fast-dtoa.cc
  src/double-conversion/fixed-dtoa.cc
  src/double-conversion/strtod.cc
  src/dragonbox/dragonbox_to_chars.cpp # 2 Aug 2025: 6c7c925
  src/fmt/src/format.cc # 2 Aug 2025: 35dcc582
  src/ryu/d2s.c
  src/schubfach/schubfach.cc
  src/yy/yy_double.c
  src/zmij/zmij.cc
  src/asteria/ascii_numput.cpp
)

target_include_directories(dtoa-benchmark PRIVATE src src/fmt/include)
target_compile_features(dtoa-benchmark PRIVATE cxx_std_20)

if (APPLE)
  execute_process(
    COMMAND sysctl -n machdep.cpu.brand_string
    OUTPUT_VARIABLE CPU_NAME
  )
elseif(LINUX)
  execute_process(
    COMMAND lscpu
    OUTPUT_VARIABLE CPU_NAME
  )
  string(REGEX MATCH "Model name: ([^\n]*)\n" CPU_NAME "${CPU_NAME}")
  string(REGEX REPLACE
    "AMD|Intel|CPU|\\(R\\)|\\(TM\\)|@|[^ ]+-Core Processor" ""
    CPU_NAME "${CMAKE_MATCH_1}"
  )
else ()
  set(CPU_NAME "unknown")
endif ()

string(STRIP "${CPU_NAME}" CPU_NAME)
string(REPLACE "  " " " CPU_NAME "${CPU_NAME}")
string(REPLACE " " "-" CPU_NAME "${CPU_NAME}")
string(TOLOWER "${CPU_NAME}" CPU_NAME)
message("CPU_NAME: ${CPU_NAME}")
target_compile_definitions(dtoa-benchmark PRIVATE MACHINE="${CPU_NAME}")

add_custom_target(
  run-benchmark
  COMMAND dtoa-benchmark
  COMMAND cmake -P convert-results.cmake
  # Run in the source directory because we want results to be in the source
  # result directory.
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  DEPENDS dtoa-benchmark
)
